fixed previous builds image sizing on mobile vs web

--- a/stylesheets/core.css
+++ b/stylesheets/core.css
@@ -151,6 +151,7 @@ img {
   }
 
   .preview_image img{
+    height: 50vh;
     display: block;
     margin: 0 auto;
     
